--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "cloudinary": "^2.7.0",
     "mongoose": "^8.17.1",
     "next": "15.4.6",
     "react": "19.1.0",
